# cyrlib

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheel.yml
raylib_to_cython/: translator.py
src/cyrlib/: __init__.py
src/cyrlib/audio/: audio.pyi  audio.pyx
src/cyrlib/audio_stream/: audio_stream.pxd  audio_stream.pyi  audio_stream.pyx
src/cyrlib/clipboard/: __init__.py  clipboard.pyi  clipboard.pyx
src/cyrlib/color/: color.pxd  color.pyi  color.pyx
src/cyrlib/colors/: colors.pxd  colors.pyi  colors.pyx
src/cyrlib/core/: core.pyi  core.pyx
src/cyrlib/cursor/: cursor.pyi  cursor.pyx
src/cyrlib/draw/: __init__.py  draw.pyi  draw.pyx
src/cyrlib/enums/: __init__.py  flags.py  keyboard_key.py  mouse_button.py  mouse_cursor.py  texture_filter.py  texture_wrap.py
src/cyrlib/image/: image.pxd  image.pyi  image.pyx
src/cyrlib/key/: __init__.py  key.pyi  key.pyx
src/cyrlib/mouse/: __init__.py  mouse.pyi  mouse.pyx
src/cyrlib/music/: music.pyi  music.pyx
src/cyrlib/raylib/: raylib.pxd  raylib.pyi
src/cyrlib/rect/: rect.pxd  rect.pyi  rect.pyx
src/cyrlib/render_texture/: __init__.py  render_texture.pxd  render_texture.pyi  render_texture.pyx
src/cyrlib/sound/: sound.pyi  sound.pyx
src/cyrlib/texture/: texture.pxd  texture.pyi  texture.pyx
src/cyrlib/vector2/: vector2.pxd  vector2.pyi  vector2.pyx
src/cyrlib/vector3/: vector3.pxd  vector3.pyi
src/cyrlib/vector4/: vector4.pyi
src/nv_raylib/: __init__.py
src/nv_raylib/color/: color.pxd
src/nv_raylib/colors/: colors.pxd  colors.pyi  colors.pyx
src/nv_raylib/core/: core.pyi
src/nv_raylib/draw/: draw.pyi  draw.pyx
src/nv_raylib/raylib/: raylib.pxd  raylib.pyi
src/nv_raylib/rect/: rect.pyi
src/nv_raylib/vector2/: vector2.pxd  vector2.pyi  vector2.pyx
src/nv_raylib/vector3/: __init__.py  vector3.pxd  vector3.pyi  vector3.pyx
src/nv_raylib/vector4/: vector4.pxd  vector4.pyi  vector4.pyx
src/syrlib/: __init__.py
src/syrlib/color/: color.pyi
src/syrlib/rect/: rect.pxd
src/syrlib/vector2/: vector2.pyi
src/syrlib/vector3/: vector3.pyi
src/syrlib/vector4/: __init__.py
tests/: test_basic.py
