[build-system]
requires = [
    "setuptools",
    "cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "cyrlib"
version = "0.0.1.post4"
authors = [
  { name="GolemNikidastrov", email="bebrovgolem@gmail.com" },
]

keywords = [
    "performance",
    "cython",
    "raylib",
    "pyray",
]

description = "Raylib bindings for Python(Based on pyray)"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Intended Audience :: Developers",
]
dependencies = [
    "numpy",
    "raylib",
]

[project.urls]
Homepage = "https://github.com/GolemBebrov/cyrlib"
Repository = "https://github.com/GolemBebrov/cyrlib"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cyrlib" = ["*.pyx"]

[tool.cibuildwheel.linux]
environment = { LD_LIBRARY_PATH = "/project/deps/libs/linux:$LD_LIBRARY_PATH" }
