[build-system]
requires = [
    "setuptools",
    "cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "cyrlib"
version = "0.0.1.post4"
authors = [
  { name="GolemNikidastrov", email="bebrovgolem@gmail.com" },
]

keywords = [
    "performance",
    "cython",
    "raylib",
    "pyray",
]

description = "Raylib bindings for Python(Based on pyray)"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Intended Audience :: Developers",
]
dependencies = [
    "numpy",
    "raylib",
]

[project.urls]
Homepage = "https://github.com/GolemBebrov/cyrlib"
Repository = "https://github.com/GolemBebrov/cyrlib"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cyrlib" = ["*.pyx"]

[tool.cibuildwheel.linux]
before-all = """
if command -v dnf > /dev/null; then
  dnf install -y alsa-lib-devel mesa-libGL-devel libX11-devel libXrandr-devel libXi-devel libXcursor-devel libXinerama-devel
elif command -v apk > /dev/null; then
  apk add --no-cache alsa-lib-dev mesa-dev libx11-dev libxrandr-dev libxi-dev libxcursor-dev libxinerama-dev build-base git
fi && \
git clone --depth 1 -b 6.0 https://github.com/raysan5/raylib.git /tmp/raylib && \
cd /tmp/raylib/src && \
make PLATFORM=PLATFORM_DESKTOP RAYLIB_LIBTYPE=SHARED && \
mkdir -p /project/deps/libs/linux && \
mkdir -p /project/deps/include && \
cp -P libraylib.so* /project/deps/libs/linux/ && \
cp raylib.h raymath.h rlgl.h /project/deps/include/
"""
environment = { LD_LIBRARY_PATH = "/project/deps/libs/linux:$LD_LIBRARY_PATH" }
